--- a/pagina3.html
+++ b/pagina3.html
@@ -30,7 +30,7 @@
   <form class="login-form">
 
     <div class="login__header">
-      <img src="images/disney-logo.png" alt="logo">
+      <img src="images/barbie-logo-png-27.jpg" alt="logo">
       <img src="images/coroa.png" alt="coroa">
       <h1>Memory Game</h1>
     </div>
